// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > bubble_map (points): JSON-safe option matches the committed golden 1`] = `
{
  "__registration": {
    "geoJson": {
      "features": [
        {
          "geometry": {
            "coordinates": [
              [
                [
                  -124,
                  32,
                ],
                [
                  -114,
                  32,
                ],
                [
                  -114,
                  42,
                ],
                [
                  -124,
                  42,
                ],
                [
                  -124,
                  32,
                ],
              ],
            ],
            "type": "Polygon",
          },
          "id": "CA",
          "properties": {
            "region": "CA",
            "state_name": "California",
          },
          "type": "Feature",
        },
        {
          "geometry": {
            "coordinates": [
              [
                [
                  -120,
                  35,
                ],
                [
                  -114,
                  35,
                ],
                [
                  -114,
                  42,
                ],
                [
                  -120,
                  42,
                ],
                [
                  -120,
                  35,
                ],
              ],
            ],
            "type": "Polygon",
          },
          "id": "NV",
          "properties": {
            "region": "NV",
            "state_name": "Nevada",
          },
          "type": "Feature",
        },
      ],
      "type": "FeatureCollection",
    },
    "name": "map-viz:bubble",
  },
  "aria": {
    "description": "Bubble map of city population.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "geo": {
    "itemStyle": {
      "areaColor": "#f2f2f2",
      "borderColor": "rgb(218, 208, 186)",
    },
    "label": {
      "show": false,
    },
    "map": "map-viz:bubble",
    "roam": false,
  },
  "series": [
    {
      "coordinateSystem": "geo",
      "data": [
        {
          "name": "874",
          "raw": {
            "city": "San Francisco",
            "lat": 37.8,
            "lng": -122.4,
            "pop": 874,
          },
          "symbolSize": 28,
          "value": [
            -122.4,
            37.8,
            874,
            874,
          ],
        },
        {
          "name": "646",
          "raw": {
            "city": "Las Vegas",
            "lat": 36.2,
            "lng": -115.1,
            "pop": 646,
          },
          "symbolSize": 6,
          "value": [
            -115.1,
            36.2,
            646,
            646,
          ],
        },
      ],
      "encode": {
        "lat": 1,
        "lng": 0,
        "value": 3,
      },
      "geoIndex": 0,
      "name": "City population",
      "tooltip": {},
      "type": "scatter",
    },
  ],
  "title": {
    "text": "City population",
  },
  "tooltip": {
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Bubble map of city population.",
      },
      "dimensions": {
        "height": 520,
        "width": 860,
      },
      "name": "City population",
      "specId": "viz:bubble",
    },
  },
  "visualMap": {
    "calculable": true,
    "dimension": 3,
    "inRange": {
      "color": [
        "rgb(223, 237, 252)",
        "rgb(68, 114, 161)",
        "rgb(0, 55, 119)",
      ],
    },
    "max": 874,
    "min": 646,
    "textStyle": {
      "color": "#4B4D5A",
    },
    "type": "continuous",
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > chord (ring): JSON-safe option matches the committed golden 1`] = `
{
  "aria": {
    "description": "Chord of regional trade.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "clockwise": true,
      "coordinateSystem": "none",
      "emphasis": {
        "focus": "adjacency",
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "position": "outside",
        "show": true,
      },
      "lineStyle": {
        "color": "source",
        "curveness": 0.5,
        "opacity": 0.5,
      },
      "links": [
        {
          "source": "AMER",
          "target": "EMEA",
          "value": 42,
        },
        {
          "source": "EMEA",
          "target": "APAC",
          "value": 31,
        },
        {
          "source": "APAC",
          "target": "AMER",
          "value": 25,
        },
      ],
      "minAngle": 0,
      "name": "Trade corridors",
      "nodes": [
        {
          "itemStyle": {
            "color": "rgb(65, 108, 217)",
          },
          "name": "AMER",
        },
        {
          "itemStyle": {
            "color": "rgb(62, 68, 190)",
          },
          "name": "EMEA",
        },
        {
          "itemStyle": {
            "color": "rgb(39, 150, 105)",
          },
          "name": "APAC",
        },
      ],
      "padAngle": 3,
      "startAngle": 90,
      "type": "chord",
    },
  ],
  "title": {
    "text": "Trade corridors",
    "textStyle": {
      "color": "#18233C",
    },
  },
  "tooltip": {
    "formatter": "{b}: {c}",
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Chord of regional trade.",
      },
      "name": "Trade corridors",
      "specId": "viz:chord",
    },
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > choropleth (join): JSON-safe option matches the committed golden 1`] = `
{
  "__registration": {
    "geoJson": {
      "features": [
        {
          "geometry": {
            "coordinates": [
              [
                [
                  -124,
                  32,
                ],
                [
                  -114,
                  32,
                ],
                [
                  -114,
                  42,
                ],
                [
                  -124,
                  42,
                ],
                [
                  -124,
                  32,
                ],
              ],
            ],
            "type": "Polygon",
          },
          "id": "CA",
          "properties": {
            "region": "CA",
            "sales": 580,
            "state": "CA",
            "state_name": "California",
          },
          "type": "Feature",
        },
        {
          "geometry": {
            "coordinates": [
              [
                [
                  -120,
                  35,
                ],
                [
                  -114,
                  35,
                ],
                [
                  -114,
                  42,
                ],
                [
                  -120,
                  42,
                ],
                [
                  -120,
                  35,
                ],
              ],
            ],
            "type": "Polygon",
          },
          "id": "NV",
          "properties": {
            "region": "NV",
            "sales": 96,
            "state": "NV",
            "state_name": "Nevada",
          },
          "type": "Feature",
        },
      ],
      "type": "FeatureCollection",
    },
    "name": "map-viz:choropleth",
  },
  "aria": {
    "description": "Choropleth of state sales.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "geo": {
    "emphasis": {
      "itemStyle": {
        "areaColor": "rgb(245, 232, 206)",
      },
    },
    "itemStyle": {
      "areaColor": "#f2f2f2",
      "borderColor": "rgb(218, 208, 186)",
    },
    "label": {
      "show": false,
    },
    "map": "map-viz:choropleth",
    "nameProperty": "region",
    "roam": false,
  },
  "series": [
    {
      "data": [
        {
          "name": "CA",
          "rawProperties": {
            "region": "CA",
            "sales": 580,
            "state": "CA",
            "state_name": "California",
          },
          "value": 580,
        },
        {
          "name": "NV",
          "rawProperties": {
            "region": "NV",
            "sales": 96,
            "state": "NV",
            "state_name": "Nevada",
          },
          "value": 96,
        },
      ],
      "emphasis": {
        "focus": "self",
      },
      "geoIndex": 0,
      "map": "map-viz:choropleth",
      "name": "State sales",
      "type": "map",
    },
  ],
  "title": {
    "text": "State sales",
  },
  "tooltip": {
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Choropleth of state sales.",
      },
      "dimensions": {
        "height": 520,
        "width": 860,
      },
      "name": "State sales",
      "specId": "viz:choropleth",
    },
  },
  "visualMap": {
    "calculable": true,
    "inRange": {
      "color": [
        "rgb(223, 237, 252)",
        "rgb(68, 114, 161)",
        "rgb(0, 55, 119)",
      ],
    },
    "max": 580,
    "min": 96,
    "textStyle": {
      "color": "#4B4D5A",
    },
    "type": "continuous",
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > force_graph (network): JSON-safe option matches the committed golden 1`] = `
{
  "aria": {
    "description": "Force graph of services.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "legend": {
    "data": [
      "backend",
      "data",
      "frontend",
    ],
    "show": true,
    "textStyle": {
      "color": "#4B4D5A",
    },
  },
  "series": [
    {
      "categories": [
        {
          "itemStyle": {
            "color": "rgb(65, 108, 217)",
          },
          "name": "backend",
        },
        {
          "itemStyle": {
            "color": "rgb(62, 68, 190)",
          },
          "name": "data",
        },
        {
          "itemStyle": {
            "color": "rgb(39, 150, 105)",
          },
          "name": "frontend",
        },
      ],
      "data": [
        {
          "category": 2,
          "fixed": false,
          "id": "web",
          "name": "web",
          "symbolSize": 10,
          "value": 9,
        },
        {
          "category": 0,
          "fixed": false,
          "id": "api",
          "name": "api",
          "symbolSize": 10,
          "value": 6,
        },
        {
          "category": 1,
          "fixed": false,
          "id": "db",
          "name": "db",
          "symbolSize": 10,
          "value": 4,
        },
        {
          "category": 1,
          "fixed": false,
          "id": "cache",
          "name": "cache",
          "symbolSize": 10,
        },
      ],
      "draggable": true,
      "edgeLabel": {
        "show": false,
      },
      "emphasis": {
        "focus": "adjacency",
        "lineStyle": {
          "width": 4,
        },
      },
      "force": {
        "edgeLength": 30,
        "friction": 0.6,
        "gravity": 0.1,
        "layoutAnimation": true,
        "repulsion": 100,
      },
      "label": {
        "color": "#18233C",
        "formatter": "{b}",
        "position": "right",
        "show": true,
      },
      "labelLayout": {
        "hideOverlap": true,
      },
      "layout": "force",
      "lineStyle": {
        "color": "source",
        "curveness": 0.3,
      },
      "links": [
        {
          "lineStyle": {
            "width": 1,
          },
          "source": "web",
          "target": "api",
          "value": 3,
        },
        {
          "lineStyle": {
            "width": 1,
          },
          "source": "api",
          "target": "db",
          "value": 2,
        },
        {
          "lineStyle": {
            "width": 1,
          },
          "source": "api",
          "target": "cache",
          "value": 1,
        },
      ],
      "name": "Service map",
      "roam": true,
      "type": "graph",
    },
  ],
  "title": {
    "text": "Service map",
    "textStyle": {
      "color": "#18233C",
    },
  },
  "tooltip": {
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Force graph of services.",
      },
      "name": "Service map",
      "specId": "viz:graph",
    },
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > sankey (flow): JSON-safe option matches the committed golden 1`] = `
{
  "aria": {
    "description": "Sankey of energy flow.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "data": [
        {
          "itemStyle": {
            "color": "rgb(65, 108, 217)",
          },
          "name": "Coal",
          "value": 100,
        },
        {
          "itemStyle": {
            "color": "rgb(62, 68, 190)",
          },
          "name": "Grid",
          "value": 100,
        },
        {
          "itemStyle": {
            "color": "rgb(39, 150, 105)",
          },
          "name": "Homes",
          "value": 60,
        },
        {
          "itemStyle": {
            "color": "rgb(181, 133, 37)",
          },
          "name": "Industry",
          "value": 40,
        },
      ],
      "emphasis": {
        "focus": "adjacency",
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "position": "right",
        "show": true,
      },
      "layoutIterations": 32,
      "lineStyle": {
        "color": "gradient",
        "curveness": 0.5,
        "opacity": 0.5,
      },
      "links": [
        {
          "source": "Coal",
          "target": "Grid",
          "value": 100,
        },
        {
          "source": "Grid",
          "target": "Homes",
          "value": 60,
        },
        {
          "source": "Grid",
          "target": "Industry",
          "value": 40,
        },
      ],
      "name": "Energy",
      "nodeAlign": "justify",
      "nodeGap": 8,
      "nodeWidth": 20,
      "orient": "horizontal",
      "type": "sankey",
    },
  ],
  "title": {
    "text": "Energy",
    "textStyle": {
      "color": "#18233C",
    },
  },
  "tooltip": {
    "trigger": "item",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Sankey of energy flow.",
      },
      "name": "Energy",
      "specId": "viz:sankey",
    },
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > sunburst (nested): JSON-safe option matches the committed golden 1`] = `
{
  "aria": {
    "description": "Sunburst of org headcount.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "data": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "Frontend",
                  "value": 25,
                },
                {
                  "children": [],
                  "name": "Backend",
                  "value": 35,
                },
              ],
              "itemStyle": {
                "color": "rgb(65, 108, 217)",
              },
              "name": "Engineering",
              "value": 60,
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "AMER",
                  "value": 24,
                },
                {
                  "children": [],
                  "name": "EMEA",
                  "value": 16,
                },
              ],
              "itemStyle": {
                "color": "rgb(62, 68, 190)",
              },
              "name": "Sales",
              "value": 40,
            },
          ],
          "name": "Org",
          "value": 100,
        },
      ],
      "emphasis": {
        "focus": "ancestor",
        "itemStyle": {
          "borderColor": "#4B4D5A",
          "borderWidth": 3,
          "shadowBlur": 10,
        },
      },
      "itemStyle": {
        "borderColor": "#FDF3DE",
        "borderRadius": 4,
        "borderWidth": 2,
      },
      "label": {
        "color": "#18233C",
        "rotate": "radial",
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
      "levels": [
        {},
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
          },
          "label": {
            "rotate": "tangential",
          },
          "r": "32%",
          "r0": "12%",
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
          },
          "label": {
            "align": "right",
          },
          "r": "68%",
          "r0": "32%",
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 2,
          },
          "label": {
            "show": false,
          },
          "r": "72%",
          "r0": "68%",
        },
      ],
      "name": "Org",
      "radius": [
        "0%",
        "90%",
      ],
      "sort": "desc",
      "startAngle": 90,
      "type": "sunburst",
    },
  ],
  "title": {
    "text": "Org",
    "textStyle": {
      "color": "#18233C",
    },
  },
  "tooltip": {
    "trigger": "item",
    "triggerOn": "mousemove",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Sunburst of org headcount.",
      },
      "name": "Org",
      "specId": "viz:sunburst",
    },
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > treemap (adjacency): JSON-safe option matches the committed golden 1`] = `
{
  "aria": {
    "description": "Treemap from adjacency list.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "breadcrumb": {
        "itemStyle": {
          "borderColor": "#D6DAE4",
          "color": "#FDF3DE",
        },
        "show": true,
        "textStyle": {
          "color": "#18233C",
        },
      },
      "data": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "Alpha-1",
                  "value": 7,
                },
              ],
              "itemStyle": {
                "color": "rgb(65, 108, 217)",
              },
              "name": "Alpha",
              "value": 12,
            },
            {
              "children": [],
              "itemStyle": {
                "color": "rgb(62, 68, 190)",
              },
              "name": "Beta",
              "value": 18,
            },
          ],
          "name": "Company",
          "value": 0,
        },
      ],
      "emphasis": {
        "focus": "ancestor",
        "itemStyle": {
          "borderColor": "#4B4D5A",
          "borderWidth": 2,
          "shadowBlur": 2,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
        },
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
        "gapWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "formatter": "{b}",
        "show": true,
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
      "levels": [
        {
          "itemStyle": {
            "borderWidth": 0,
            "gapWidth": 4,
          },
          "upperLabel": {
            "show": false,
          },
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 2,
            "gapWidth": 2,
          },
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
            "gapWidth": 1,
          },
        },
      ],
      "name": "Company",
      "nodeClick": "zoomToNode",
      "roam": false,
      "squareRatio": 1.618,
      "type": "treemap",
      "upperLabel": {
        "color": "#18233C",
        "height": 28,
        "show": true,
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
    },
  ],
  "title": {
    "text": "Company",
    "textStyle": {
      "color": "#18233C",
    },
  },
  "tooltip": {
    "trigger": "item",
    "triggerOn": "mousemove",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Treemap from adjacency list.",
      },
      "name": "Company",
      "specId": "viz:treemap-adj",
    },
  },
}
`;

exports[`golden ECharts options — treemap / sunburst / sankey / force_graph / choropleth / bubble_map > treemap (nested): JSON-safe option matches the committed golden 1`] = `
{
  "aria": {
    "description": "Treemap of org headcount.",
    "enabled": true,
  },
  "backgroundColor": "#FDF3DE",
  "color": [
    "rgb(65, 108, 217)",
    "rgb(62, 68, 190)",
    "rgb(39, 150, 105)",
    "rgb(181, 133, 37)",
    "rgb(202, 73, 73)",
    "rgb(153, 59, 0)",
  ],
  "series": [
    {
      "breadcrumb": {
        "itemStyle": {
          "borderColor": "#D6DAE4",
          "color": "#FDF3DE",
        },
        "show": true,
        "textStyle": {
          "color": "#18233C",
        },
      },
      "data": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "Frontend",
                  "value": 25,
                },
                {
                  "children": [],
                  "name": "Backend",
                  "value": 35,
                },
              ],
              "itemStyle": {
                "color": "rgb(65, 108, 217)",
              },
              "name": "Engineering",
              "value": 60,
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "AMER",
                  "value": 24,
                },
                {
                  "children": [],
                  "name": "EMEA",
                  "value": 16,
                },
              ],
              "itemStyle": {
                "color": "rgb(62, 68, 190)",
              },
              "name": "Sales",
              "value": 40,
            },
          ],
          "name": "Org",
          "value": 100,
        },
      ],
      "emphasis": {
        "focus": "ancestor",
        "itemStyle": {
          "borderColor": "#4B4D5A",
          "borderWidth": 2,
          "shadowBlur": 2,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
        },
      },
      "itemStyle": {
        "borderColor": "#D6DAE4",
        "borderWidth": 1,
        "gapWidth": 1,
      },
      "label": {
        "color": "#18233C",
        "formatter": "{b}",
        "show": true,
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
      "levels": [
        {
          "itemStyle": {
            "borderWidth": 0,
            "gapWidth": 4,
          },
          "upperLabel": {
            "show": false,
          },
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 2,
            "gapWidth": 2,
          },
        },
        {
          "itemStyle": {
            "borderColor": "#D6DAE4",
            "borderWidth": 1,
            "gapWidth": 1,
          },
        },
      ],
      "name": "Org",
      "nodeClick": "zoomToNode",
      "roam": false,
      "squareRatio": 1.618,
      "type": "treemap",
      "upperLabel": {
        "color": "#18233C",
        "height": 28,
        "show": true,
        "textBorderColor": "#FDF3DE",
        "textBorderWidth": 2,
      },
    },
  ],
  "title": {
    "text": "Org",
    "textStyle": {
      "color": "#18233C",
    },
  },
  "tooltip": {
    "trigger": "item",
    "triggerOn": "mousemove",
  },
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Treemap of org headcount.",
      },
      "name": "Org",
      "specId": "viz:treemap",
    },
  },
}
`;
